@@ -37,8 +37,8 @@ class Matrix(_SimpleLayoutBase):
     """
 
     defaults = [
-        ("border_focus", "#0000ff", "Border colour for the focused window."),
-        ("border_normal", "#000000", "Border colour for un-focused windows."),
+        ("border_focus", "#0000ff", "Border colour(s) for the focused window."),
+        ("border_normal", "#000000", "Border colour(s) for un-focused windows."),
         ("border_width", 1, "Border width."),
         ("name", "matrix", "Name of this layout."),
         ("margin", 0, "Margin of the layout (int or list of ints [N E S W])"),
