@@ -84,8 +84,8 @@ class VerticalTile(_SimpleLayoutBase):
     """
 
     defaults = [
-        ('border_focus', '#FF0000', 'Border color for the focused window.'),
-        ('border_normal', '#FFFFFF', 'Border color for un-focused windows.'),
+        ('border_focus', '#FF0000', 'Border color(s) for the focused window.'),
+        ('border_normal', '#FFFFFF', 'Border color(s) for un-focused windows.'),
         ('border_width', 1, 'Border width.'),
         ('margin', 0, 'Border margin (int or list of ints [N E S W]).'),
         ('name', 'verticaltile', 'Name of this layout.'),
