@@ -44,7 +44,7 @@ setup_requires =
 install_requires =
   cffi >= 1.1.0
   cairocffi[xcb] >= 0.9.0
-  xcffib >= 0.8.1
+  xcffib >= 0.10.1
 tests_require =
   flake8
   pep8-naming
