@@ -22,7 +22,7 @@ whitelist_externals=convert
 deps =
     pytest-runner
     setuptools >= 40.5.0
-    xcffib >= 0.8.1
+    xcffib >= 0.10.1
 commands =
     python3 setup.py pytest --addopts "-Wall --cov libqtile --cov-report term-missing {posargs}"
 
@@ -54,7 +54,7 @@ commands =
 [testenv:mypy]
 deps =
     mypy
-    xcffib >= 0.8.1
+    xcffib >= 0.10.1
 commands =
     pip install -r requirements.txt
     mypy -p libqtile
